--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -7,14 +7,13 @@ on:
   push:
     branches:
       - master
-      - 2.3.0-qulei
 
 jobs:
   build-rpm:
     name: Run on CentOS 7
     runs-on: ubuntu-latest
     container:
-      image: "centos:7"
+      image: "openanolis/anolisos:latest"
 
     steps:
       - name: Checkout code
@@ -22,21 +21,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          rm -rf /etc/yum.repos.d/*
-          curl -o /etc/yum.repos.d/CentOS-Base.repo https://mirrors.aliyun.com/repo/Centos-7.repo
-          yum clean all            
-          yum install epel-release wget -y
-          yum makecache
+          yum install -y python3.8
           ldd --version
-          yum -y install gcc g++ make
-          pwd
-          cd ../
-          wget https://www.python.org/ftp/python/3.8.12/Python-3.8.12.tgz
-          tar -xzf Python-3.8.12.tgz
-          cd Python-3.8.12
-          ./configure
-          make && make install
-          cd -
           python3 -m pip install --upgrade pip setuptools wheel
           pip3 install -r requirements3.txt
           python3 --version
