--- a/example/operator.yml
+++ b/example/operator.yml
@@ -32,5 +32,6 @@ obcluster:
       redo_Dir: /home/admin/oceanbase/store
       ip: xx.xx.xx.xx
     global:
+      # if running obdiag in kubernetes, please delete the kubernetes_config_file
       kubernetes_config_file: "~/.kube/config/config.yaml"
 
