--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -7,13 +7,14 @@ on:
   push:
     branches:
       - master
+      - 2.3.0-build_test
 
 jobs:
   build-rpm:
     name: Run on CentOS 7
     runs-on: ubuntu-latest
     container:
-      image: "openanolis/anolisos:latest"
+      image: "centos:7"
 
     steps:
       - name: Checkout code
@@ -21,7 +22,15 @@ jobs:
 
       - name: Install dependencies
         run: |
-          yum install -y python3.8
+          rm -rf /etc/yum.repos.d/*
+          curl -o /etc/yum.repos.d/CentOS-Base.repo https://mirrors.aliyun.com/repo/Centos-7.repo
+          yum install -y wget 
+          wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh --no-check-certificate
+          sh Miniconda3-latest-Linux-x86_64.sh -p /opt/miniconda3 -b
+          export PATH=/opt/miniconda3/bin:$PATH
+          conda init
+          conda create --name obdiag python=3.8 -y
+          source activate obdiag
           ldd --version
           python3 -m pip install --upgrade pip setuptools wheel
           pip3 install -r requirements3.txt
@@ -30,6 +39,8 @@ jobs:
 
       - name: Build package
         run: |
+          export PATH=/opt/miniconda3/bin:$PATH
+          source activate obdiag
           pwd
           ls -lh
           export RELEASE=`date +%Y%m%d%H%M`
