--- a/conf/inner_config.yml
+++ b/conf/inner_config.yml
@@ -25,9 +25,6 @@ rca:
   result_path: "./rca/"
 analyze_sql:
   output_type: "html"
-  result_path: "./obdiag_analyze_sql/"
-  sql_audit_limit: 10
+  result_path: "./obdiag_analyze/"
+  sql_audit_limit: 2000
   elapsed_time: 100
-analyze_sql_review:
-  output_type: "html"
-  result_path: "./obdiag_analyze_sql_review/"
