--- a/requirements3.txt
+++ b/requirements3.txt
@@ -19,8 +19,8 @@ tabulate==0.8.9
 zstandard==0.17.0
 pycryptodome~=3.14.1
 pick==1.2.0
-PyYAML==6.0
-prettytable==3.10.0
+PyYAML==6.0.2rc1
+prettytable==3.5.0
 oyaml==1.0
 xmltodict==0.13.0
 subprocess32==3.5.4
@@ -36,3 +36,5 @@ halo==0.0.31
 inspect2==0.1.2
 sqlgpt-parser>=0.0.1a5
 netifaces==0.11.0
+netifaces==0.11.0
+kubernetes==30.1.0
