--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -7,7 +7,6 @@ on:
   push:
     branches:
       - master
-      - 2.3.0-fix_obdiag_config
 
 jobs:
   build-rpm:
@@ -17,6 +16,9 @@ jobs:
       image: "centos:7"
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Install dependencies
         run: |
           rm -rf /etc/yum.repos.d/*
