--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - '*'
+env:
+  ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
 
 jobs:
   build-rpm:
@@ -17,7 +19,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Install dependencies
         run: |
