--- a/handler/gather/tasks/observer/base.yaml
+++ b/handler/gather/tasks/observer/base.yaml
@@ -40,29 +40,29 @@ task:
         sql: "show variables like 'version_comment';"
         global: true
       - type: sql
-        sql: "SELECT * FROM oceanbase.DBA_OB_ZONES;"
+        sql: "SELECT * FROM oceanbase.DBA_OB_ZONES ORDER BY ZONE;"
         global: true
       - type: sql
-        sql: "SELECT * FROM oceanbase.DBA_OB_SERVERS;"
+        sql: "SELECT * FROM oceanbase.DBA_OB_SERVERS ORDER BY ZONE;"
         global: true
       - type: sql
-        sql: "SELECT * FROM oceanbase.GV$OB_SERVERS;"
-        global: true
-      - type: sql
-        sql: "SELECT * FROM oceanbase.DBA_OB_UNIT_CONFIGS;"
-        global: true
-      - type: sql
-        sql: "SELECT * FROM oceanbase.DBA_OB_RESOURCE_POOLS;"
+        sql: "SELECT SVR_IP,SVR_PORT,ZONE,SQL_PORT,CPU_CAPACITY,CPU_CAPACITY_MAX,CPU_ASSIGNED,CPU_ASSIGNED_MAX, concat(ROUND(MEM_CAPACITY/1024/1024/1024,0), 'G') as MEM_CAPACITY, concat(ROUND(MEM_ASSIGNED/1024/1024/1024,0), 'G') as MEM_ASSIGNED, concat(ROUND(LOG_DISK_CAPACITY/1024/1024/1024,0), 'G') as LOG_DISK_CAPACITY, concat(ROUND(LOG_DISK_ASSIGNED/1024/1024/1024,0), 'G') as LOG_DISK_ASSIGNED, concat(ROUND(LOG_DISK_IN_USE/1024/1024/1024,0), 'G') as LOG_DISK_IN_USE, concat(ROUND(DATA_DISK_CAPACITY/1024/1024/1024,0), 'G') as DATA_DISK_CAPACITY,concat(ROUND(DATA_DISK_IN_USE/1024/1024/1024,0), 'G') as DATA_DISK_IN_USE,concat(ROUND(MEMORY_LIMIT/1024/1024/1024,0), 'G') as MEMORY_LIMIT,concat(ROUND(DATA_DISK_ALLOCATED/1024/1024/1024,0), 'G') as DATA_DISK_ALLOCATED FROM oceanbase.GV$OB_SERVERS;"
         global: true
       - type: sql
         sql: "SELECT * FROM oceanbase.DBA_OB_TENANTS;"
         global: true
       - type: sql
-        sql: "SELECT c.TENANT_ID, e.TENANT_NAME, concat(c.NAME, ': ', d.NAME) `pool:conf`,concat(c.UNIT_COUNT, ' unit: ', d.min_cpu, 'C/', ROUND(d.MEMORY_SIZE/1024/1024/1024,0), 'G') unit_info FROM oceanbase.DBA_OB_RESOURCE_POOLS c, oceanbase.DBA_OB_UNIT_CONFIGS d, oceanbase.DBA_OB_TENANTS e WHERE c.UNIT_CONFIG_ID=d.UNIT_CONFIG_ID AND c.TENANT_ID=e.TENANT_ID AND c.TENANT_ID>1000 ORDER BY c.TENANT_ID;"
+        sql: "SELECT c.TENANT_ID, e.TENANT_NAME, concat(c.NAME, ': ', d.NAME) `pool:conf`,concat(c.UNIT_COUNT, ' unit: ', d.min_cpu, 'C/', ROUND(d.MEMORY_SIZE/1024/1024/1024,0), 'G') unit_info FROM oceanbase.DBA_OB_RESOURCE_POOLS c, oceanbase.DBA_OB_UNIT_CONFIGS d, oceanbase.DBA_OB_TENANTS e WHERE c.UNIT_CONFIG_ID=d.UNIT_CONFIG_ID AND c.TENANT_ID=e.TENANT_ID ORDER BY c.TENANT_ID;"
         global: true
       - type: sql
         sql: "SELECT a.TENANT_NAME,a.TENANT_ID,b.SVR_IP FROM oceanbase.DBA_OB_TENANTS a, oceanbase.GV$OB_UNITS b WHERE a.TENANT_ID=b.TENANT_ID;"
         global: true
       - type: sql
+        sql: "select /*+read_consistency(weak) QUERY_TIMEOUT(60000000) */  t1.svr_ip, t1.role, t1.tenant_id,t1.database_name,t1.table_name, ifnull(t2.data_size,0) / 1073741824 as total_data_size_gb  from (select tenant_id, database_name, table_name, role, svr_ip, table_id, tablet_id  from oceanbase.cdb_ob_table_locations) t1 left join  (select tenant_id, tablet_id, data_size from oceanbase.cdb_ob_tablet_replicas)  t2 on t1.tenant_id = t2.tenant_id and  t1.tablet_id = t2.tablet_id order by total_data_size_gb desc limit 50;"
+        global: true
+      - type: sql
         sql: "show parameters"
+        global: true
+      - type: sql
+        sql: "show variables"
         global: true
