--- a/handler/gather/tasks/observer/io.yaml
+++ b/handler/gather/tasks/observer/io.yaml
@@ -52,13 +52,13 @@ task:
         sql: "show variables like 'version_comment';"
         global: true
       - type: sql
-        sql: "SELECT * FROM oceanbase.DBA_OB_ZONES;"
+        sql: "SELECT * FROM oceanbase.DBA_OB_ZONES ORDER BY ZONE;"
         global: true
       - type: sql
-        sql: "SELECT * FROM oceanbase.DBA_OB_SERVERS;"
+        sql: "SELECT * FROM oceanbase.DBA_OB_SERVERS ORDER BY ZONE;"
         global: true
       - type: sql
-        sql: "SELECT * FROM oceanbase.GV$OB_SERVERS;"
+        sql: "SELECT SVR_IP,SVR_PORT,ZONE,SQL_PORT,CPU_CAPACITY,CPU_CAPACITY_MAX,CPU_ASSIGNED,CPU_ASSIGNED_MAX, concat(ROUND(MEM_CAPACITY/1024/1024/1024,0), 'G') as MEM_CAPACITY, concat(ROUND(MEM_ASSIGNED/1024/1024/1024,0), 'G') as MEM_ASSIGNED, concat(ROUND(LOG_DISK_CAPACITY/1024/1024/1024,0), 'G') as LOG_DISK_CAPACITY, concat(ROUND(LOG_DISK_ASSIGNED/1024/1024/1024,0), 'G') as LOG_DISK_ASSIGNED, concat(ROUND(LOG_DISK_IN_USE/1024/1024/1024,0), 'G') as LOG_DISK_IN_USE, concat(ROUND(DATA_DISK_CAPACITY/1024/1024/1024,0), 'G') as DATA_DISK_CAPACITY,concat(ROUND(DATA_DISK_IN_USE/1024/1024/1024,0), 'G') as DATA_DISK_IN_USE,concat(ROUND(MEMORY_LIMIT/1024/1024/1024,0), 'G') as MEMORY_LIMIT,concat(ROUND(DATA_DISK_ALLOCATED/1024/1024/1024,0), 'G') as DATA_DISK_ALLOCATED FROM oceanbase.GV$OB_SERVERS;"
         global: true
       - type: sql
         sql: "SELECT * FROM oceanbase.DBA_OB_UNIT_CONFIGS;"
