--- a/requirements3.txt
+++ b/requirements3.txt
@@ -34,5 +34,7 @@ ruamel.yaml==0.17.4
 progressbar==2.5
 halo==0.0.31
 inspect2==0.1.2
+sqlgpt-parser>=0.0.1a5
+netifaces==0.11.0
 netifaces==0.11.0
 kubernetes==30.1.0
