update unittest for workflow

--- a/.github/workflows/test_ssh_client.yml
+++ b/.github/workflows/test_ssh_client.yml
@@ -2,9 +2,9 @@ name: Test Ssh Client
 
 on:
   push:
-    branches: "*"
+    branches: "dev*"
   pull_request:
-    branches: "*"
+    branches: "dev*"
 
 jobs:
   build:
