--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - master
+      - 2.4.0-fix-get_obproxy_version
 
 env:
   ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
