add new io buffer

--- a/conf/inner_config.yml
+++ b/conf/inner_config.yml
@@ -13,6 +13,7 @@ obdiag:
     mode: obdiag
     stdout_handler_log_level: INFO
     error_stream: sys.stdout
+    silent: false
   ssh_client:
     remote_client_sudo: 0
 check:
