fix display scene list problem

--- a/handler/display/tasks/observer/server_info.yaml
+++ b/handler/display/tasks/observer/server_info.yaml
@@ -1,6 +1,6 @@
 info_en: "[server info]"
 info_cn: "[server 信息展示]"
-command: obdiag display scene run --scene=observer.server
+command: obdiag display scene run --scene=observer.server_info
 task:
   - version: "[4.0.0.0, *]"
     steps:
