--- a/handler/display/tasks/observer/zone_info.yaml
+++ b/handler/display/tasks/observer/zone_info.yaml
@@ -1,6 +1,6 @@
 info_en: "[zone info]"
 info_cn: "[zone 信息展示]"
-command: obdiag display scene run --scene=observer.zone
+command: obdiag display scene run --scene=observer.zone_info
 task:
   - version: "[4.0.0.0, *]"
     steps:
