--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -4,9 +4,11 @@ on:
   pull_request:
     branches:
       - master
+      - display_hj2
   push:
     branches:
       - master
+      - display_hj2
 
 env:
   ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
