The default result path for obdiag rca has been changed to ./obdiag_rca

--- a/conf/inner_config.yml
+++ b/conf/inner_config.yml
@@ -27,4 +27,4 @@ gather:
   scenes_base_path: "~/.obdiag/gather/tasks"
   redact_processing_num: 3
 rca:
-  result_path: "./rca/"
+  result_path: "./obdiag_rca/"
