--- a/handler/checker/tasks/observer/system/getenforce.yaml
+++ b/handler/checker/tasks/observer/system/getenforce.yaml
@@ -7,7 +7,7 @@ task:
         set_value: getenforce_exist
         report_type: execution
         verify: '[ "exist" != "${getenforce_exist}" ]'
-        err_msg: 'Do not warning. getenforce is exist. We will check SELinux by getenforce'
+        err_msg: '[not warning] getenforce is exist. We will check SELinux by getenforce'
     - type: ssh
       ssh: "getenforce"
       result:
