--- a/handler/display/tasks/observer/lockholder.yaml
+++ b/handler/display/tasks/observer/lockholder.yaml
@@ -1,6 +1,6 @@
 info_en: "[lock holder info]"
 info_cn: "[查看锁等待]"
-command: obdiag display scene run --scene=observer.lockholder --env "{db_connect='-h127.0.0.1 -P2881 -utest@test -p****** -Dtest'}"
+command: obdiag display scene run --scene=observer.lockholder --env db_connect='-h127.0.0.1 -P2881 -utest@test -p****** -Dtest'
 task:
   - version: "[4.0.0.0, *]"
     steps:
