--- a/handler/display/tasks/observer/processlist.yaml
+++ b/handler/display/tasks/observer/processlist.yaml
@@ -1,6 +1,6 @@
 info_en: "[processlist]"
 info_cn: "[查看processlist]"
-command: obdiag display scene run --scene=observer.processlist --env "{db_connect='-h127.0.0.1 -P2881 -utest@test -p****** -Dtest'}"
+command: obdiag display scene run --scene=observer.processlist --env db_connect='-h127.0.0.1 -P2881 -utest@test -p****** -Dtest'
 task:
   - version: "[4.0.0.0, *]"
     steps:
