--- a/handler/checker/tasks/observer/bugs/bug_469.yaml
+++ b/handler/checker/tasks/observer/bugs/bug_469.yaml
@@ -6,15 +6,17 @@ task:
       ssh: "ldd --version | head -n 1 | awk '{print $NF}' | cut -d. -f1'"
       result:
         set_value: ldd_version
+        report_type: warning
         verify_type: max
         verify: 3
-        err_msg: "glibc version must less 2.34"
+        err_msg: "glibc version need less 2.34. This may cause observer crash. More information： https://github.com/oceanbase/obdiag/issues/469"
     - type: ssh
       ssh: "ldd --version | head -n 1 | awk '{print $NF}' | cut -d. -f2'"
       result:
         set_value: ldd_version
+        report_type: warning
         verify_type: max
         verify: 34
-        err_msg: "glibc version must less 2.34"
+        err_msg: "glibc version need less 2.34. This may cause observer crash. More information： https://github.com/oceanbase/obdiag/issues/469"
 
 
