--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Install Alien
         run: |
           sudo apt-get update
-          sudo apt-get install -y alien
+          sudo apt-get install -y alien gcc
 
       - name: Convert RPM to DEB
         run: |
