--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -24,6 +24,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          apt install -y gcc
           export PATH=/opt/miniconda3/bin:$PATH
           source activate obdiag
           ldd --version
