gather redact support zip_passwd

--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          apt install -y gcc
+          yum install -y gcc
           export PATH=/opt/miniconda3/bin:$PATH
           source activate obdiag
           ldd --version
