--- a/.github/workflows/format_check.yml
+++ b/.github/workflows/format_check.yml
@@ -21,6 +21,7 @@ jobs:
 
     - name: Install Black
       run: |
+        sudo apt-get install -y gcc zlib1g-dev
         python -m pip install --upgrade pip
         pip install black
 
