--- a/.github/workflows/test_sql_rule.yml
+++ b/.github/workflows/test_sql_rule.yml
@@ -23,6 +23,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        sudo apt-get install -y gcc zlib1g-dev
         python -m pip install --upgrade pip
         pip install -r requirements3.txt
 
