To remove the dependency on the zip command and implement encryption of zip files through code

--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -27,6 +27,7 @@ jobs:
           export PATH=/opt/miniconda3/bin:$PATH
           source activate obdiag
           ldd --version
+          sudo yum install gcc gcc-c++ make
           pip3 install -r requirements3.txt
 
       - name: Build package
