--- a/.github/workflows/build_base_docker.yml
+++ b/.github/workflows/build_base_docker.yml
@@ -1,12 +1,9 @@
-name: build docker
+name: build docker helper
 
-on:
-  pull_request:
-    branches:
-      - master
+on: 
   push:
-    branches:
-      - master
+    tags: 
+      - 'helper-[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   build-docker:
