--- a/handler/display/tasks/observer/event.yaml
+++ b/handler/display/tasks/observer/event.yaml
@@ -1,6 +1,5 @@
 info_en: "[event]"
 info_cn: "[event信息]"
-# command: obdiag display scene run --scene=observer.event --env db_connect='-h127.0.0.1 -P2881 -utest@test -p****** -Dtest'
 command: obdiag display scene run --scene=observer.event --env tenant_name=test
 task:
   - version: "[4.0.0.0, *]"
@@ -43,7 +42,7 @@ task:
               event_group) a, oceanbase.__all_tenant b 
               where a.tenant_id=b.tenant_id and b.tenant_name='{tenant_name}';"
         global: true
-  - version: "[3.0.0.0, *]"
+  - version: "[3.0.0.0, 4.0.0.0]"
     steps:
       - type: sql
         sql: "select b.tenant_name,a.* from (SELECT
