--- a/handler/display/tasks/observer/processlist.yaml
+++ b/handler/display/tasks/observer/processlist.yaml
@@ -1,6 +1,5 @@
 info_en: "[processlist]"
 info_cn: "[查看processlist]"
-# command: obdiag display scene run --scene=observer.processlist --env db_connect='-h127.0.0.1 -P2881 -utest@test -p****** -Dtest'
 command: obdiag display scene run --scene=observer.processlist --env tenant_name=test
 task:
   - version: "[4.0.0.0, *]"
@@ -8,7 +7,7 @@ task:
       - type: sql
         sql: "select * from oceanbase.gv$ob_processlist where tenant='{tenant_name}';"
         global: true
-  - version: "[3.0.0.0, *]"
+  - version: "[3.0.0.0, 4.0.0.0]"
     steps:
       - type: sql
         sql: "select * from oceanbase.__all_virtual_processlist where tenant='{tenant_name}';"
